@@ -23,3 +23,4 @@ SAVEPOINT,10,10,554,540
 SPIKE,408,167,438,167,423,192,0
 SPIKE,669,503,699,503,684,528,0
 SPIKE,617,488,647,488,632,513,0
+SHOOTER,10,10,200,200
