@@ -10,12 +10,10 @@ class BasicEnemy : public GameObject
         CharacterState state;
         Vec prevPosition;
         Vec velocity;
-        int delay;
 	float Inc;
 	Coordinates enemyWalkRight[10];
 	Coordinates enemyWalkLeft[10];
 
-        BasicEnemy() {}
         BasicEnemy(int, int, int, int);
         virtual ~BasicEnemy();
         virtual void update();
