@@ -24,7 +24,7 @@ using namespace std;
 
 enum ShapeType {RECTANGLE, TRIANGLE/*, CIRCLE*/};
 enum GameState {MAIN_MENU, PLAYING, EXIT_GAME, LEVEL_EDITOR};
-enum ObjectType {HERO, ENEMY, SPIKE, PLATFORM, SAVEPOINT,SHOOTERENEMY,MELEEENEMY, HBULLET, EBULLET};
+enum ObjectType {HERO, ENEMY, SPIKE, PLATFORM, SAVEPOINT, SHOOTERENEMY, MELEEENEMY, HBULLET, EBULLET};
 enum CharacterState {STANDING, WALKING, JUMPING, DEATH};
 enum ShapeOrientation {FACING_UP, FACING_LEFT, FACING_DOWN, FACING_RIGHT};
 
